# claude-usage

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
extras/: claude-usage-tracker.service  claude-usage-web.service  rate-limit-hook.sh
src/claude_usage/: __init__.py  aggregator.py  calibrator.py  cli.py  db.py  fetcher.py  history.py  models.py  parser.py  scanner.py  web.py
tests/: test_aggregator.py  test_calibrator.py  test_db.py  test_fetcher.py  test_parser.py  test_scanner.py
tests/fixtures/: agent_progress.jsonl  assistant_root.jsonl  assistant_subagent.jsonl  system_message.jsonl  tool_use_result.jsonl  user_message.jsonl
