[project]
name = "claude-usage"
version = "0.1.0"
description = "Realtime Claude Code usage estimation from on-disk session logs"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
claude-usage-tracker = "claude_usage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_usage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
